--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
+title: Intrudr-Sec
+description: Personal GitHub for Intrudr-Sec
+logo: images/intrudr-wide.jpg
+show_downloads: false
 theme: jekyll-theme-minimal
-title: [Intrudr-Sec]
-description: [Personal GitHub for Intrudr-Sec]
-logo: [https://github.com/Intrudr-Sec/intrudr-sec.GitHub.io/blob/main/images/intrudr-wide.jpg]
-show_downloads: ["false"]
