--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,6 @@
-<<<<<<< HEAD
 title: Intrudr-Sec
 description: Personal GitHub for Intrudr-Sec
 logo: images/intrudr-wide.jpg
 show_downloads: false
 theme: jekyll-theme-minimal
-=======
-theme: jekyll-theme-minimal
-title: [Intrudr-Sec]
-description: Personal GitHub for Intrudr-Sec
-logo: https://github.com/Intrudr-Sec/intrudr-sec.GitHub.io/blob/main/images/intrudr-wide.jpg
-show_downloads: "false"
->>>>>>> b8b9e2be0c5723e0c5105279ed6b12832bc009eb
+show_downloads: false
